# kimyanggang

Backend/: Dockerfile  README.md  main.py  main_local.py  pyproject.toml
Backend/main/: docker-compose.yaml  dockerfile  main.py  requirement.txt
Frontend/functions/: twenty_questions.py
Frontend/locales/en-US/: twenty_questions.yaml
Models/: twenty_questions.py
backend:v01/: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml
backend:v01/routers/: __init__.py  health.py  home.py
backend:v01/routers/functions/: __init__.py  generate.py
frontend/: Dockerfile  README.md  package-lock.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx
frontend/src/component/: EmptyPage.tsx  GameStart.tsx  Header.tsx  Home.tsx
frontend/src/styles/: GameStart.css  Header.css  Home.css
k8s/: backend.yaml  frontend.yaml
