[tool.poetry]
name = "fastapi-app"
version = "0.1.0"
description = "A FastAPI application"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
uvicorn = "^0.18.3"
pydantic = "^1.10.6"
openai = "^0.27.0"
aiofiles = "^23.2.1"
requests = "^2.28.2"
python-multipart = "*"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
