[tool.poetry]
name = "20_questions-backend"
version = "0.1.0"
description = "MobileX Experience Lab Project - 20_questions - Backend"
authors = ["DongHyeon Kim"]


[[tool.poetry.packages]]
include = "./routers/**/*.py"

[[tool.poetry.packages]]
include = "./0_Home.py"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.85.1"
uvicorn = "^0.19.0"
pydantic = "^1.10.2"
python-dotenv = "^0.21.0"
openai = "^0.27.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-asyncio = "^0.18.3"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn backend.main:app --reload --host 0.0.0.0 --port 8000"